[gd_scene load_steps=5 format=3 uid="uid://h3vtxt6t0p5n"]

[ext_resource type="Texture2D" uid="uid://bvbclpmm57wb7" path="res://Textures/BALLKOUR_Menu_Screen.png" id="1_1bxdl"]
[ext_resource type="Script" uid="uid://43j12v4vc8ph" path="res://Scenes/menus/main_menu.gd" id="1_6upyc"]
[ext_resource type="Theme" uid="uid://w01bn6ippsou" path="res://Scenes/menus/pause_theme.tres" id="3_6p7ge"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6upyc"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6upyc")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_1bxdl")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 437.0
offset_top = 40.0
offset_right = 892.0
offset_bottom = 463.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_6p7ge")
theme_override_styles/panel = SubResource("StyleBoxEmpty_6upyc")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="Play" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Play"

[node name="Credits" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Credits"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Quit"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
